--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/com/elektronetf/ttt/gui/TTTControlFrame.java=UTF-8
 encoding//src/com/elektronetf/ttt/gui/TTTFrame.java=UTF-8
+encoding//src/org/elektronetf/ttt/gui/TTTControlFrame.java=UTF-8
+encoding//src/org/elektronetf/ttt/gui/TTTFrame.java=UTF-8
