--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,4 @@ encoding//src/org/elektronetf/ttt/gui/GroupTable.java=UTF-8
 encoding//src/org/elektronetf/ttt/gui/MatchPanel.java=UTF-8
 encoding//src/org/elektronetf/ttt/gui/TTTControlFrame.java=UTF-8
 encoding//src/org/elektronetf/ttt/gui/TTTFrame.java=UTF-8
+encoding/<project>=UTF-8
